# CCPLATFORM1

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  AI_RULES.md  APISPEC.md  ARCHITECTURE.md  PRD.md  README.md  STAGING_RUNBOOK_87.106.76.154.md  ecosystem.production.config.cjs  ecosystem.staging.config.cjs  ecosystem.staging.local.cjs  erver changes (live engine tweaks) to main"  package-lock.json
.github/workflows/: ci.yml  deploy.yml  monitor.yml
api/: .eslintrc.js  Dockerfile  history.txt  jest.config.ts  mint.js  package-lock.json  package.json  tsconfig.spec.json
api/prisma/: schema.prisma  seed.ts
api/scripts/: seed-sample-order.js
api/src/: app.module.ts  main.ts  seed.ts
api/tools/: mint-jwt.js
docs/: SLO.md
docs/releases/: v1.0.0.md  v1.0.1-rc.1.md
infra/: README.md  compose.prod.yml  docker-compose.yml
infra/db/: README.md
recipe/: Dockerfile  README.md  pyproject.toml
recipe/app/: main.py
recipe/app/api/: routes.py
recipe/app/core/: config.py
recipe/app/models/: schemas.py
recipe/app/services/: generator.py  seed_data.py
recipe/custom_cocktails_recipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recipe/tests/: test_auth.py
scripts/: smoke.sh
web/: .eslintrc.js  Dockerfile  auth.ts  auth.ts.save  middleware.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  udo lsof -i :80
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/components/: age-gate-button.tsx
web/lib/: prisma.ts  utils.ts  (+1 more)
(+162 files in other folders)
