[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-cocktails-recipe"
version = "1.0.1-rc.1"
description = "Recipe generation microservice for Custom Cocktails"
authors = [{ name = "Custom Cocktails" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "python-dotenv==1.0.1",
  "pyjwt[crypto]==2.8.0",
  "sentry-sdk==1.45.0"
]

[project.optional-dependencies]
dev = ["ruff==0.4.4", "pytest==8.1.1"]

[tool.uvicorn]
factory = false
reload = true
host = "0.0.0.0"
port = 5000
app = "app.main:app"
